Add Hypersomnia project

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,6 +51,43 @@
             </header>
         </div>
         <section class="spotlight">
+            <div class="image projectDirectLinks"><a><img src="https://placehold.it/752x532" alt="" /></a></div>
+            <div class="content">
+                <h2>Hypersomnia</h2>
+                <p>Projet en cours</p>
+                <p>Platforme API en ligne pour construire et utiliser des API.</p>
+                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
+                    <li class="language">
+                        <img src="/assets/css/images/languages/laravel.svg" alt="">
+                        <p>Laravel</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/sass.svg" alt="">
+                        <p>Sass</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/bootstrap.svg" alt="">
+                        <p>Bootstrap</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/javascript.svg" alt="">
+                        <p>Javascript</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/mysql.svg" alt="">
+                        <p>MySQL</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/heroku.svg" alt="">
+                        <p>Heroku</p>
+                    </li>
+                </ul>
+                <div class="projectLinks">
+                    <a target="_blank" href="/hypersomnia">Voir plus</a>
+                </div>
+            </div>
+        </section>
+        <section class="spotlight">
             <div class="image projectDirectLinks"><a
                     href="https://alexandreravichandran.github.io/Remind-Me-frontend"><img width="100%"
                         src="/assets/css/images/remindme.png" alt="" /></a></div>
