Add laravel skill

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -317,12 +317,16 @@
                             <p>API-Platform</p>
                         </div>
                         <div class="language">
-                            <img src="/assets/css/images/languages/mysql.svg" alt="">
-                            <p>MySQL</p>
-                        </div>
-                        <div class="language">
                             <img src="/assets/css/images/languages/lumen.svg" alt="">
                             <p>Lumen</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/laravel.svg" alt="">
+                            <p>Laravel</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/mysql.svg" alt="">
+                            <p>MySQL</p>
                         </div>
                     </div>
                 </li>
