--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,7 +51,7 @@
             </header>
         </div>
         <section class="spotlight">
-            <div class="image projectDirectLinks"><a><img src="https://placehold.it/752x532" alt="" /></a></div>
+            <div class="image projectDirectLinks"><a href="https://app-todo-list.surge.sh/"><img src="https://placehold.it/752x532" alt="" /></a></div>
             <div class="content">
                 <h2>To-do list</h2>
                 <p>Projet en cours</p>
@@ -75,7 +75,7 @@
                     </li>
                 </ul>
                 <div class="projectLinks">
-                    <a target="_blank" href="/To-do-list">Voir plus</a>
+                    <a target="_blank" href="/to-do-list">Voir plus</a>
                 </div>
             </div>
         </section>
