Add angular typescript and surge skill to homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -308,6 +308,10 @@
                             <img src="/assets/css/images/languages/javascript.svg" alt="">
                             <p>Javascript</p>
                         </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/typescript.svg" alt="">
+                            <p>Typescript</p>
+                        </div>
                     </div>
                 </li>
 
@@ -329,6 +333,10 @@
                         <div class="language">
                             <img src="/assets/css/images/languages/sass.svg" alt="">
                             <p>Sass</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/angular.svg" alt="">
+                            <p>Angular</p>
                         </div>
                     </div>
 
@@ -370,6 +378,10 @@
                         <div class="language">
                             <img src="/assets/css/images/languages/aws.svg" alt="">
                             <p>AWS</p>
+                        </div>
+                        <div class="language">
+                            <img style="width:25px" src="/assets/css/images/languages/surge.svg" alt="">
+                            <p>Surge</p>
                         </div>
                     </div>
                 </li>
