correct link to todolist project

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -75,7 +75,7 @@
                     </li>
                 </ul>
                 <div class="projectLinks">
-                    <a target="_blank" href="/hypersomnia">Voir plus</a>
+                    <a target="_blank" href="/to-do-list">Voir plus</a>
                 </div>
             </div>
         </section>
