Update projects, remove hypersomnia and add course system project

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,8 +53,36 @@
         <section class="spotlight">
             <div class="image projectDirectLinks"><a><img src="https://placehold.it/752x532" alt="" /></a></div>
             <div class="content">
-                <h2>Todo-list</h2>
+                <h2>Système de cours en ligne</h2>
                 <p>Projet en cours</p>
+                <p></p>
+                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
+                    <li class="language">
+                        <img src="/assets/css/images/languages/spring.svg" alt="">
+                        <p>Spring Boot</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/angular.svg" alt="">
+                        <p>Angular</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/bootstrap.svg" alt="">
+                        <p>Bootstrap</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/heroku.svg" alt="">
+                        <p>Heroku</p>
+                    </li>
+                </ul>
+                <div class="projectLinks">
+                    <a target="_blank" class="disabled" href="/">Voir plus</a>
+                </div>
+            </div>
+        </section>
+        <section class="spotlight">
+            <div class="image projectDirectLinks"><a><img src="https://placehold.it/752x532" alt="" /></a></div>
+            <div class="content">
+                <h2>Todo-list</h2>
                 <p>Application de "to-do list" pour concevoir une liste de taches à faire</p>
                 <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
                     <li class="language">
@@ -76,43 +104,6 @@
                 </ul>
                 <div class="projectLinks">
                     <a target="_blank" href="/to-do-list">Voir plus</a>
-                </div>
-            </div>
-        </section>
-        <section class="spotlight">
-            <div class="image projectDirectLinks"><a><img src="https://placehold.it/752x532" alt="" /></a></div>
-            <div class="content">
-                <h2>Hypersomnia</h2>
-                <p>Projet en cours</p>
-                <p>Platforme API en ligne pour construire et utiliser des API.</p>
-                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
-                    <li class="language">
-                        <img src="/assets/css/images/languages/laravel.svg" alt="">
-                        <p>Laravel</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/sass.svg" alt="">
-                        <p>Sass</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/bootstrap.svg" alt="">
-                        <p>Bootstrap</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/javascript.svg" alt="">
-                        <p>Javascript</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/mysql.svg" alt="">
-                        <p>MySQL</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/heroku.svg" alt="">
-                        <p>Heroku</p>
-                    </li>
-                </ul>
-                <div class="projectLinks">
-                    <a target="_blank" href="/hypersomnia">Voir plus</a>
                 </div>
             </div>
         </section>
@@ -305,6 +296,10 @@
                             <p>PHP</p>
                         </div>
                         <div class="language">
+                            <img src="/assets/css/images/languages/java.svg" alt="">
+                            <p>Java</p>
+                        </div>
+                        <div class="language">
                             <img src="/assets/css/images/languages/javascript.svg" alt="">
                             <p>Javascript</p>
                         </div>
@@ -314,7 +309,6 @@
                         </div>
                     </div>
                 </li>
-
                 <li class="icon solid fa-desktop">
                     <h3>Front-end</h3>
                     <div style="display:flex;flex-wrap: wrap;justify-content: center;">
@@ -352,6 +346,10 @@
                         <div class="language">
                             <img src="/assets/css/images/languages/api-platform.svg" alt="">
                             <p>API-Platform</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/spring.svg" alt="">
+                            <p>Spring Boot</p>
                         </div>
                         <div class="language">
                             <img src="/assets/css/images/languages/lumen.svg" alt="">
