--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,8 +22,10 @@
                     effectué des projets personnels pour solidifier mes compétences.</p>
                 <p style="color:white">Durant mon année en autodidacte, j'ai eu une énorme préférence pour le côté
                     Back-end du développement web, préférence qui n'a cessé d'accroitre lors de mon apprentissage de
-                    Symfony. Il était donc évident pour moi de me spécialiser dans le côté back. Cependant, j'essaye
-                    également de m'intéresser aux technologies Front-End, comme React et Vue.js.</p>
+                    Symfony. Il était donc évident pour moi de me spécialiser dans le côté back. Après avoir beaucoup
+                    travaillé avec le langage PHP et ses frameworks (Symfony et Laravel), je me suis tourné vers
+                    l'univers de Java (Spring boot) pour le back et Angular pour le front, et travaille actuellement sur
+                    ces deux technologies.</p>
                 <div style="display:flex;justify-content: center;margin-bottom: 30px;">
                     <a target="_blank"
                         style="text-decoration:none;display:block;background-color:rgb(0, 0, 0,0.7);padding: 15px;border-radius: 15px;width:180px;font-weight: bold;"
@@ -62,6 +64,10 @@
                         <p>Spring Boot</p>
                     </li>
                     <li class="language">
+                        <img src="/assets/css/images/languages/sass.svg" alt="">
+                        <p>Scss</p>
+                    </li>
+                    <li class="language">
                         <img src="/assets/css/images/languages/angular.svg" alt="">
                         <p>Angular</p>
                     </li>
@@ -70,12 +76,16 @@
                         <p>Bootstrap</p>
                     </li>
                     <li class="language">
+                        <img src="/assets/css/images/languages/surge.svg" alt="">
+                        <p>Surge</p>
+                    </li>
+                    <li class="language">
                         <img src="/assets/css/images/languages/heroku.svg" alt="">
                         <p>Heroku</p>
                     </li>
                 </ul>
                 <div class="projectLinks">
-                    <a target="_blank" class="disabled" href="/">Voir plus</a>
+                    <a target="_blank" class="disabled" href="/course-system">Voir plus</a>
                 </div>
             </div>
         </section>
@@ -151,8 +161,8 @@
             </div>
         </section>
         <section class="spotlight">
-            <div class="image projectDirectLinks"><a href="#"><img width="100%"
-                        src="/assets/css/images/oldix.png" alt="" /></a></div>
+            <div class="image projectDirectLinks"><a href="#"><img width="100%" src="/assets/css/images/oldix.png"
+                        alt="" /></a></div>
             <div class="content">
                 <h2>Oldix</h2>
                 <p>Projet en équipe</p>
@@ -211,7 +221,8 @@
             </div>
         </section>
         <section class="spotlight">
-            <div class="image projectDirectLinks"><a href="https://spacetrip-app.herokuapp.com/"><img src="/assets/css/images/spacetrip.png" alt="" /></a></div>
+            <div class="image projectDirectLinks"><a href="https://spacetrip-app.herokuapp.com/"><img
+                        src="/assets/css/images/spacetrip.png" alt="" /></a></div>
             <div class="content">
                 <h2>Spacetrip</h2>
                 <p>Agence fictive de voyages dans l'espace.</p>
