Translate website into english

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                     class="label">Mail</span></a></li>
     </ul>
     <ul class="copyright">
-        <li>Basé sur un template sous licence <a href="https://creativecommons.org/licenses/by/3.0/">Creative Commons
+        <li>Based on a template under licence <a href="https://creativecommons.org/licenses/by/3.0/">Creative Commons
                 Attribution 3.0 Unported (CC BY 3.0)</a></li>
     </ul>
 </footer>
