--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
 	<title>Alexandre RAVICHANDRAN - Website</title>
@@ -26,11 +26,11 @@
 						<div id="menu">
 							<ul>
 								<li><a href="/">Home</a></li>
-								<li><a href="/#one">A propos de moi</a></li>
+								<li><a href="/#one">About me</a></li>
 								<li><a href="/#two">Portfolio</a></li>
-								<li><a href="/#three">Competences</a></li>
-								<li><a href="/#four">Parcours</a></li>
-								<li><a href="/#cta">Coordonnées/Contact</a></li>
+								<li><a href="/#three">Skills</a></li>
+								<li><a href="/#four">Experiences</a></li>
+								<li><a href="/#cta">Contact informations</a></li>
 							</ul>
 						</div>
 					</li>
