--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
     <section id="banner">
         <div class="inner">
             <h2>Alexandre RAVICHANDRAN</h2>
-            <p>Junior web developer</p>
+            <p>Web developer</p>
         </div>
         <a href="#one" class="more scrolly">See more</a>
     </section>
@@ -24,6 +24,8 @@
                     and his related frameworks (Symfony and Laravel), I have decided to discover the Java universe
                     (Spring boot) for the Back-End and Angular for the Front-End, and I am currently working on these
                     technologies right now.</p>
+                <p style="color:white">I am also discovering other types of development, like scripting with Python language, only for fun
+                    (for now).</p>
                 <div style="display:flex;justify-content: center;margin-bottom: 30px;">
                     <a target="_blank"
                         style="text-decoration:none;display:block;background-color:rgb(0, 0, 0,0.7);padding: 15px;border-radius: 15px;width:210px;font-weight: bold;"
@@ -52,9 +54,29 @@
         <section class="spotlight">
             <div class="image projectDirectLinks"><a><img src="https://placehold.it/752x532" alt="" /></a></div>
             <div class="content">
-                <h2>Todo-list</h2>
-                <p>Todo-list application to make a list of tasks to do</p>
+                <h2>User data generator</h2>
+                <p>Application to generate standard user datas</p>
                 <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
+                    <li class="language">
+                        <img src="/assets/css/images/languages/spring.svg" alt="">
+                        <p>Spring boot</p>
+                    </li>
+                </ul>
+                <div class="projectLinks">
+                    <a target="_blank" href="/user-data-generator">See details</a>
+                </div>
+            </div>
+        </section>
+        <section class="spotlight">
+            <div class="image projectDirectLinks"><a><img src="https://placehold.it/752x532" alt="" /></a></div>
+            <div class="content">
+                <h2>Job search manager</h2>
+                <p>Application to manage your job researches</p>
+                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
+                    <li class="language">
+                        <img src="/assets/css/images/languages/spring.svg" alt="">
+                        <p>Spring boot</p>
+                    </li>
                     <li class="language">
                         <img src="/assets/css/images/languages/angular.svg" alt="">
                         <p>Angular</p>
@@ -64,8 +86,8 @@
                         <p>Sass</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/bootstrap.svg" alt="">
-                        <p>Bootstrap</p>
+                        <img src="/assets/css/images/languages/heroku.svg" alt="">
+                        <p>Heroku</p>
                     </li>
                     <li class="language">
                         <img src="/assets/css/images/languages/surge.svg" alt="">
@@ -73,7 +95,7 @@
                     </li>
                 </ul>
                 <div class="projectLinks">
-                    <a target="_blank" href="/to-do-list">See details</a>
+                    <a target="_blank" href="/job-search-manager">See details</a>
                 </div>
             </div>
         </section>
@@ -283,6 +305,14 @@
                     <h3>Front-end</h3>
                     <div style="display:flex;flex-wrap: wrap;justify-content: center;">
                         <div class="language">
+                            <img src="/assets/css/images/languages/angular.svg" alt="">
+                            <p>Angular</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/ngrx.svg" alt="">
+                            <p>NgRx</p>
+                        </div>
+                        <div class="language">
                             <img src="/assets/css/images/languages/bootstrap.svg" alt="">
                             <p>Bootstrap</p>
                         </div>
@@ -298,17 +328,16 @@
                             <img src="/assets/css/images/languages/sass.svg" alt="">
                             <p>Sass</p>
                         </div>
-                        <div class="language">
-                            <img src="/assets/css/images/languages/angular.svg" alt="">
-                            <p>Angular</p>
-                        </div>
                     </div>
-
                 </li>
 
                 <li class="icon solid fa-server">
                     <h3>Back-end</h3>
                     <div style="display:flex;flex-wrap: wrap;justify-content: center;">
+                        <div class="language">
+                            <img src="/assets/css/images/languages/spring.svg" alt="">
+                            <p>Spring Boot</p>
+                        </div>
                         <div class="language">
                             <img src="/assets/css/images/languages/symfony.svg" alt="">
                             <p>Symfony</p>
@@ -316,14 +345,6 @@
                         <div class="language">
                             <img src="/assets/css/images/languages/api-platform.svg" alt="">
                             <p>API-Platform</p>
-                        </div>
-                        <div class="language">
-                            <img src="/assets/css/images/languages/spring.svg" alt="">
-                            <p>Spring Boot</p>
-                        </div>
-                        <div class="language">
-                            <img src="/assets/css/images/languages/lumen.svg" alt="">
-                            <p>Lumen</p>
                         </div>
                         <div class="language">
                             <img src="/assets/css/images/languages/laravel.svg" alt="">
@@ -363,12 +384,30 @@
                             <p>GNU-Linux</p>
                         </div>
                         <div class="language">
+                            <img src="/assets/css/images/languages/docker.svg" alt="">
+                            <p>Docker</p>
+                        </div>
+                        <div class="language">
                             <img src="/assets/css/images/languages/mamp.svg" alt="">
                             <p>MAMP</p>
                         </div>
                         <div class="language">
                             <img src="/assets/css/images/languages/git.svg" alt="">
                             <p>Git</p>
+                        </div>
+
+                    </div>
+                </li>
+                <li class="icon solid fa-wrench">
+                    <h3>Tools</h3>
+                    <div style="display:flex;flex-wrap: wrap;justify-content: center;">
+                        <div class="language">
+                            <img src="/assets/css/images/languages/rabbitmq.svg" alt="">
+                            <p>RabbitMQ</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/jenkins.svg" alt="">
+                            <p>Jenkins</p>
                         </div>
                     </div>
                 </li>
