Add PSD certificate

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -430,6 +430,36 @@
             </header>
             <div style="display:flex;justify-content: space-between;">
                 <div>
+                    <h5 style="margin-bottom: 0;">Capgemini
+                    </h5>
+                </div>
+                <div>
+                    <h5>From Dec-2021</h5>
+                </div>
+            </div>
+            <p style="font-weight:bold;">Software Engineer Consultant</p>
+            <div
+                style="display:flex;justify-content: center;flex-direction: column;text-align: center;margin-bottom: 20px;color:white">
+                <ul style="display:flex;align-items: center;flex-direction: column;text-align: left;color:white">
+                    <h5>Work with several technologies in software Engineer mission</h5>
+                    <li>Spring Boot</li>
+                    <li>Angular</li>
+                    <li>RabbitMQ</li>
+                    <li>Docker</li>
+                    <li>Jenkins</li>
+                    <li>Microservice architecture</li>
+                </ul>
+
+                <h5>Side activities</h5>
+                <p>Attending the Professional Scrum Developer Certificate I (PSD-1) with a score of 92 %
+                    (<a target="_blank" href="/assets/docs/attestation_professional_scrum_developer_I.pdf">
+                        certificate
+                    </a>)
+                </p>
+            </div>
+            <hr>
+            <div style="display:flex;justify-content: space-between;">
+                <div>
                     <h5 style="margin-bottom: 0;">O'clock school
                     </h5>
                 </div>
@@ -437,7 +467,6 @@
                     <h5>June 2021 - November 2021 </h5>
                 </div>
             </div>
-            <p style="font-weight:bold;margin-bottom: 0;">Formation intensive en Développement Web et Web Mobile</p>
             <p style="font-weight:bold;margin-bottom: 0;">Intensive formation on web development and mobile web
                 development</p>
             <p style="font-weight:bold;">Specialization on Symfony</p>
