Add bank account project and add heroku error message

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,8 @@
                     and his related frameworks (Symfony and Laravel), I have decided to discover the Java universe
                     (Spring boot) for the Back-End and Angular for the Front-End, and I am currently working on these
                     technologies right now.</p>
-                <p style="color:white">I am also discovering other types of development, like scripting with Python language, only for fun
+                <p style="color:white">I am also discovering other types of development, like scripting with Python
+                    language, only for fun
                     (for now).</p>
                 <div style="display:flex;justify-content: center;margin-bottom: 30px;">
                     <a target="_blank"
@@ -51,6 +52,34 @@
                     current project that I am working on.</p>
             </header>
         </div>
+        <section class="spotlight">
+            <div class="image projectDirectLinks"><a><img src="https://placehold.it/752x532" alt="" /></a></div>
+            <div class="content">
+                <h2>Bank account manager</h2>
+                <p>Application to manage your different bank accounts</p>
+                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
+                    <li class="language">
+                        <img src="/assets/css/images/languages/spring.svg" alt="">
+                        <p>Spring boot</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/angular.svg" alt="">
+                        <p>Angular</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/ngrx.svg" alt="">
+                        <p>NgRx</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/mysql.svg" alt="">
+                        <p>MySQL</p>
+                    </li>
+                </ul>
+                <div class="projectLinks">
+                    <a target="_blank" href="/bank-account-manager">See details</a>
+                </div>
+            </div>
+        </section>
         <section class="spotlight">
             <div class="image projectDirectLinks"><a><img src="https://placehold.it/752x532" alt="" /></a></div>
             <div class="content">
@@ -299,6 +328,10 @@
                             <img src="/assets/css/images/languages/typescript.svg" alt="">
                             <p>Typescript</p>
                         </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/python.svg" alt="">
+                            <p>Python</p>
+                        </div>
                     </div>
                 </li>
                 <li class="icon solid fa-desktop">
@@ -452,15 +485,16 @@
 
                 <h5>Side activities</h5>
                 <p>Attending the Professional Scrum Developer Certificate I (PSD-1) with a score of 92 %
-                    (<a target="_blank" href="/assets/docs/attestation_professional_scrum_developer_I.pdf">
-                        certificate
-                    </a>)
+                    (<a target="_blank"
+                        href="/assets/docs/attestation_professional_scrum_developer_I.pdf">certificate</a>)
                 </p>
             </div>
             <hr>
             <div style="display:flex;justify-content: space-between;">
-                <div>
-                    <h5 style="margin-bottom: 0;">O'clock school
+                <div style="display:flex; align-items: center;">
+                    <img style="margin-right: 10px;" width="100px" src="/assets/css/images/pomodoro.png" alt="">
+                    <h5 style="margin-bottom: 0;">
+                        O'clock school
                     </h5>
                 </div>
                 <div>
@@ -515,9 +549,8 @@
                 <p>Learning of the basics of Symfony, Docker and Jekyll</p>
                 <p>Practical application with the making of personnal projects</p>
                 <p>Attending the MOOC of the ANSSI : Introduction to cybersecurity and protection of digital tools
-                    (<a target="_blank" href="/assets/docs/attestation_secnumacademie_Alexandre_RAVICHANDRAN.pdf">
-                        certificate
-                    </a>)
+                    (<a target="_blank"
+                        href="/assets/docs/attestation_secnumacademie_Alexandre_RAVICHANDRAN.pdf">certificate</a>)
                 </p>
             </div>
             <hr>
