Add media list maker project

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,9 +28,6 @@
                     language, only for fun
                     (for now).</p>
                 <div style="display:flex;justify-content: center;margin-bottom: 30px;">
-                    <a target="_blank"
-                        style="text-decoration:none;display:block;background-color:rgb(0, 0, 0,0.7);padding: 15px;border-radius: 15px;width:210px;font-weight: bold;"
-                        href="/assets/docs/CV_Alexandre_RAVICHANDRAN_Back_End.pdf">See my resume</a>
                 </div>
                 <ul class="icons">
                     <li><a target="_blank" style="font-size: 50px;"
@@ -52,6 +49,43 @@
                     current project that I am working on.</p>
             </header>
         </div>
+        <section class="spotlight">
+            <div class="image projectDirectLinks"><a><img src="https://placehold.it/752x532" alt="" /></a></div>
+            <div class="content">
+                <h2>Media list maker <a href="#remind-me">(Remind-me v2)</a></h2>
+                <p>Work in progress</p>
+                <p>Application to create a list of movie to watch and music to listen.</p>
+                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
+                    <li class="language">
+                        <img src="/assets/css/images/languages/spring.svg" alt="">
+                        <p>Spring boot</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/postgresql.svg" alt="">
+                        <p>PostgreSQL</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/angular.svg" alt="">
+                        <p>Angular</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/tailwind.svg" alt="">
+                        <p>Tailwind CSS</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/ngrx.svg" alt="">
+                        <p>NgRx</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/docker.svg" alt="">
+                        <p>Docker</p>
+                    </li>
+                </ul>
+                <div class="projectLinks">
+                    <a target="_blank" href="/media-list-maker">See details</a>
+                </div>
+            </div>
+        </section>
         <section class="spotlight">
             <div class="image projectDirectLinks"><a><img src="https://placehold.it/752x532" alt="" /></a></div>
             <div class="content">
@@ -128,7 +162,7 @@
                 </div>
             </div>
         </section>
-        <section class="spotlight">
+        <section id="remind-me" class="spotlight">
             <div class="image projectDirectLinks"><a
                     href="https://alexandreravichandran.github.io/Remind-Me-frontend"><img width="100%"
                         src="/assets/css/images/remindme.png" alt="" /></a></div>
@@ -210,7 +244,7 @@
                     </li>
                     <li class="language">
                         <img src="/assets/css/images/languages/tailwind.svg" alt="">
-                        <p>Tailwind</p>
+                        <p>Tailwind CSS</p>
                     </li>
                     <li class="language">
                         <img src="/assets/css/images/languages/javascript.svg" alt="">
@@ -351,7 +385,7 @@
                         </div>
                         <div class="language">
                             <img src="/assets/css/images/languages/tailwind.svg" alt="">
-                            <p>Tailwind</p>
+                            <p>Tailwind CSS</p>
                         </div>
                         <div class="language">
                             <img src="/assets/css/images/languages/jekyll.svg" alt="">
@@ -462,7 +496,7 @@
                 <h2>Experiences</h2>
             </header>
             <div style="display:flex;justify-content: space-between;">
-                <div>
+                <div style="display:flex; align-items: center;">
                     <h5 style="margin-bottom: 0;">Capgemini
                     </h5>
                 </div>
@@ -492,7 +526,7 @@
             <hr>
             <div style="display:flex;justify-content: space-between;">
                 <div style="display:flex; align-items: center;">
-                    <img style="margin-right: 10px;" width="100px" src="/assets/css/images/pomodoro.png" alt="">
+                    <img style="margin-right: 10px;" width="100px" src="/assets/css/images/Oclock.jpg" alt="">
                     <h5 style="margin-bottom: 0;">
                         O'clock school
                     </h5>
@@ -586,7 +620,6 @@
                         Romainvilliers</a></li>
                 <li class="icon solid fa-envelope"> <a target="_blank"
                         href="mailto:alexandre.ravichandran@gmail.com">alexandre.ravichandran@gmail.com</a></li>
-                <li class="fas fa-phone-alt">0695179977</li>
             </ul>
         </div>
     </section>
