Add picture for media list maker project + frontend link

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -50,10 +50,10 @@
             </header>
         </div>
         <section class="spotlight">
-            <div class="image projectDirectLinks"><a><img src="https://placehold.it/752x532" alt="" /></a></div>
+            <div class="image projectDirectLinks"><a><img src="/assets/css/images/medialistmaker.png" alt="" /></a>
+            </div>
             <div class="content">
                 <h2>Media list maker <a href="#remind-me">(Remind-me v2)</a></h2>
-                <p>Work in progress</p>
                 <p>Application to create a list of movie to watch and music to listen.</p>
                 <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
                     <li class="language">
