--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,20 +13,20 @@
         <div class="inner">
             <header class="major">
                 <h2>About me</h2>
-                <p style="color:white">Previously in the quality field, I have decided in 2020 to make a professional
-                    retraining on the computer field, and more specifically web development. After having been
-                    self-taught for a year, I have decided to attend to a intensive training about web development at <a
-                        href="https://oclock.io/">O'clock</a>, to validate my skill and correct all my bad practices. At
-                    the same time, I made some personnal projects to consolidate my skills.</p>
-                <p style="color:white">During my self-taught, I had a huge preference on the Back-End section of web
-                    development, preferences that has continued to increase during my learning of Symfony. It was
-                    therefore obvious to me to specialize myself on the Back-End section. After working a lot with PHP
-                    and his related frameworks (Symfony and Laravel), I have decided to discover the Java universe
-                    (Spring boot) for the Back-End and Angular for the Front-End, and I am currently working on these
-                    technologies right now.</p>
-                <p style="color:white">I am also discovering other types of development, like scripting with Python
-                    language, only for fun
-                    (for now).</p>
+                <p style="color:white">Passionate software engineer since 2020, and specialized in Java/Angular since
+                    2021</p>
+                <p style="color:white"> Since 2020, I followed a self-learning path, starting with exploring the world
+                    of PHP
+                    development before drifting in the one of Java. This approach has not only enabled me to
+                    develop my technical skills but also my ability to creatively and effectively solve problems. I'm
+                    constantly seeking new challenges and personal projects to upgrade my knowledge. Whether it's
+                    upgrading my algothimic skill, angular skill,
+                    exploring new Java features, or studying best
+                    development practices, I'm always excited to learn and improve.</p>
+                <p style="color:white">
+                    On this website, I share my journey, past and present projects, and my explanations about them. Feel
+                    free to explore and reach out if you'd like to collaborate on an exciting project or simply exchange
+                    ideas. Thank you for visiting and happy exploring!</p>
                 <div style="display:flex;justify-content: center;margin-bottom: 30px;">
                 </div>
                 <ul class="icons">
