Add new project in homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,6 +53,48 @@
             </header>
         </div>
         <section class="spotlight">
+            <div class="image projectDirectLinks"><a><img src="/assets/css/images/cryptotracker.png" alt="" /></a>
+            </div>
+            <div class="content">
+                <h2>Crypto tracker</h2>
+                <p>Application to track your crypto-currency bag.</p>
+                <p>Work in progress</p>
+                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
+                    <li class="language">
+                        <img src="/assets/css/images/languages/spring.svg" alt="">
+                        <p>Spring boot</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/postgresql.svg" alt="">
+                        <p>PostgreSQL</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/angular.svg" alt="">
+                        <p>Angular</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/bootstrap.svg" alt="">
+                        <p>Bootstrap</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/ngrx.svg" alt="">
+                        <p>NgRx</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/docker.svg" alt="">
+                        <p>Docker</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/rabbitmq.svg" alt="">
+                        <p>RabbitMQ</p>
+                    </li>
+                </ul>
+                <div class="projectLinks">
+                    <a target="_blank" href="/crypto-tracker">See details</a>
+                </div>
+            </div>
+        </section>
+        <section class="spotlight">
             <div class="image projectDirectLinks"><a><img src="/assets/css/images/medialistmaker.png" alt="" /></a>
             </div>
             <div class="content">
